fix footer layout on small screens

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -454,7 +454,9 @@
   flex-grow: 1;
 }
 .content-secondary {
-  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
   max-width: 400px;
 }
 .content-secondary .social-media {
@@ -463,6 +465,8 @@
 }
 
 .profile-section {
+  height: fit-content;
+  display: block;
   position: relative;
   border-radius: 12px;
   margin-top: 60px;
@@ -753,14 +757,15 @@ footer {
   position: relative;
 }
 footer .logo-wrap {
+  padding: 0 32px;
   align-self: center;
 }
 footer .logo-wrap a {
   display: flex;
   align-items: center;
   color: #000;
-  font-size: 22px;
-  line-height: 30px;
+  font-size: 18px;
+  line-height: 27px;
   transition: 0.2s;
 }
 footer .logo-wrap a:hover {
@@ -802,6 +807,33 @@ footer .logo-wrap a:hover {
   font-size: 17px;
 }
 
+@media (min-width: 425px) and (max-width: 768px) {
+  .footer-layout {
+    grid-template-columns: 50% 50%;
+    grid-row-gap: 25px;
+  }
+  .footer-layout .logo-wrap {
+    grid-row: 1/3;
+  }
+}
+@media (max-width: 425px) {
+  .footer-layout {
+    grid-template-columns: 1fr;
+    grid-row-gap: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .logo-wrap a {
+    flex-direction: column;
+    text-align: center;
+    font-size: 15px;
+    line-height: 20px;
+  }
+  .logo-wrap .footer-img {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+}
 * {
   box-sizing: border-box;
 }
