--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -3,14 +3,15 @@ footer {
   position: relative;
 
   .logo-wrap {
+    padding: 0 32px;
     align-self: center;
 
     a {
       display: flex;
       align-items: center;
       color: #000;
-      font-size: 22px;
-      line-height: 30px;
+      font-size: 18px;
+      line-height: 27px;
       transition: 0.2s;
 
       &:hover {
@@ -60,5 +61,39 @@ footer {
     padding-bottom: 10px;
     border-bottom: 2px solid hsla(0, 0%, 84%, 0.8);
     font-size: 17px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 768px) {
+  .footer-layout {
+    grid-template-columns: 50% 50%;
+    grid-row-gap: 25px;
+
+    .logo-wrap {
+      grid-row: 1/3;
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .footer-layout {
+    grid-template-columns: 1fr;
+    grid-row-gap: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .logo-wrap {
+    a {
+      flex-direction: column;
+      text-align: center;
+      font-size: 15px;
+      line-height: 20px;
+    }
+
+    .footer-img {
+      margin-right: 0;
+      margin-bottom: 15px;
+    }
   }
 }
